--- a/SFMLTest2/SFMLTest2.csproj
+++ b/SFMLTest2/SFMLTest2.csproj
@@ -15,16 +15,16 @@
 
   <ItemGroup>
     <Reference Include="sfml-audio">
-      <HintPath>D:\SFML.Net-2.4\lib\sfml-audio.dll</HintPath>
+      <HintPath>..\SFML.Net-2.4\lib\sfml-audio.dll</HintPath>
     </Reference>
     <Reference Include="sfml-graphics">
-      <HintPath>D:\SFML.Net-2.4\lib\sfml-graphics.dll</HintPath>
+      <HintPath>..\SFML.Net-2.4\lib\sfml-graphics.dll</HintPath>
     </Reference>
     <Reference Include="sfml-system">
-      <HintPath>D:\SFML.Net-2.4\lib\sfml-system.dll</HintPath>
+      <HintPath>..\SFML.Net-2.4\lib\sfml-system.dll</HintPath>
     </Reference>
     <Reference Include="sfml-window">
-      <HintPath>D:\SFML.Net-2.4\lib\sfml-window.dll</HintPath>
+      <HintPath>..\SFML.Net-2.4\lib\sfml-window.dll</HintPath>
     </Reference>
   </ItemGroup>
 
