--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-**/bin/Debug/
-**/bin/Release/
-**/obj/Debug/
-**/obj/Release/
-Debug/
-Release/
+**/bin/Debug/*
+**/bin/Release/*
+**/obj/Debug/*
+**/obj/Release/*
+Debug/*
+Release/*
